--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swagger-stats-lions",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "API Telemetry and APM. Trace API calls and Monitor API performance, health and usage statistics in Node.js Microservices, based on express routes and Swagger (Open API) specification",
   "main": "lib/index.js",
   "scripts": {
@@ -47,16 +47,18 @@
   "dependencies": {
     "basic-auth": "^2.0.0",
     "cookies": "^0.7.1",
+    "cpu-stat": "^2.0.1",
     "debug": "^3.1.0",
     "fs": "0.0.1-security",
     "moment": "^2.19.3",
+    "os-utils": "0.0.14",
     "path-to-regexp": "^2.1.0",
     "prom-client": "^11.0.0",
     "request": "^2.85.0",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
-    "artillery": "^1.6.0-22",
+    "artillery": "^1.6.0-26",
     "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
     "chai": "^4.1.2",
